Updated Copyable App

--- a/web/index.html
+++ b/web/index.html
@@ -29,8 +29,10 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>copyable</title>
+  <title>Copyable</title>
   <link rel="manifest" href="manifest.json">
+
+  <link rel="stylesheet" type="text/css" href="./style.css">
 
   <script>
     // The value below is injected by flutter build, do not touch.
